# fastapi-backend-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.local.yaml  env.example  pyproject.toml
alembic/: env.py
alembic/versions/: 42f690fe074a_initial_migration_user_model.py  7a0c89818090_add_is_superuser_field_to_user_model.py
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  user.py
app/core/: config.py  database.py  logging.py  rate_limit.py  security.py
app/crud/: base.py  user.py
app/middleware/: logging.py
app/models/: __init__.py  base.py  user.py
app/schemas/: response.py  token.py  user.py
app/services/: user.py
app/utils/: correlation.py
docs/: DOCKER.md  LOGGING.md  TESTING.md
examples/: production-logging.env
scripts/: init-db.sql  start.sh
tests/: conftest.py
tests/test_api/: test_auth.py  test_deps.py  test_main.py  test_user.py
tests/test_crud/: test_user.py
tests/test_logging/: test_audit_logging.py
tests/test_services/: test_user.py
